feature: popup markup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body class="page">
-  
+  <div class="popup">
+
+  </div>
+  <div class="popup__container">
+    <h2 class="popup__header">Редактировать профиль</h2>
+    <p class="popup__name">Жак-Ив Кусто</p>
+    <p class="popup__caption">Исследователь океана</p>
+    <button class="popup__button">Сохранить</button>
+    <div class="popup__close-icon"></div>
+  </div>
   <header class="header">
     <img class="header__logo" src="./images/logo.svg" alt="логотип Место Россия">
   </header>
@@ -28,11 +37,11 @@
     </section>
     <ul class="elements">
       <li class="element">
-          <img class="element__image" src="./images//karachaevsk.png" alt="Карачаевск">
-          <div class="element__caption">
-            <h2 class="element__heading">Карачаевск</h2>
-            <button class="element__like-button"></button>
-          </div>
+        <img class="element__image" src="./images//karachaevsk.png" alt="Карачаевск">
+        <div class="element__caption">
+          <h2 class="element__heading">Карачаевск</h2>
+          <button class="element__like-button"></button>
+        </div>
       </li>
       <li class="element">
         <img class="element__image" src="./images/elbrus.png" alt="Карачаевск">
@@ -40,35 +49,35 @@
           <h2 class="element__heading">Гора Эльбрус</h2>
           <button class="element__like-button"></button>
         </div>
-    </li>
-    <li class="element">
-      <img class="element__image" src="./images/dombai.png" alt="Карачаевск">
-      <div class="element__caption">
-        <h2 class="element__heading">Домбай</h2>
-        <button class="element__like-button"></button>
-      </div>
-  </li>
-  <li class="element">
-    <img class="element__image" src="./images/elbrus.png" alt="Карачаевск">
-    <div class="element__caption">
-      <h2 class="element__heading">Гора Эльбрус</h2>
-      <button class="element__like-button"></button>
-    </div>
-</li>
-<li class="element">
-  <img class="element__image" src="./images/dombai.png" alt="Карачаевск">
-  <div class="element__caption">
-    <h2 class="element__heading">Домбай</h2>
-    <button class="element__like-button"></button>
-  </div>
-</li>
-<li class="element">
-  <img class="element__image" src="./images/karachaevsk.png" alt="Карачаевск">
-  <div class="element__caption">
-    <h2 class="element__heading">Карачаево-Черкессия</h2>
-    <button class="element__like-button"></button>
-  </div>
-</li>
+      </li>
+      <li class="element">
+        <img class="element__image" src="./images/dombai.png" alt="Карачаевск">
+        <div class="element__caption">
+          <h2 class="element__heading">Домбай</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </li>
+      <li class="element">
+        <img class="element__image" src="./images/elbrus.png" alt="Карачаевск">
+        <div class="element__caption">
+          <h2 class="element__heading">Гора Эльбрус</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </li>
+      <li class="element">
+        <img class="element__image" src="./images/dombai.png" alt="Карачаевск">
+        <div class="element__caption">
+          <h2 class="element__heading">Домбай</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </li>
+      <li class="element">
+        <img class="element__image" src="./images/karachaevsk.png" alt="Карачаевск">
+        <div class="element__caption">
+          <h2 class="element__heading">Карачаево-Черкессия</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </li>
     </ul>
   </main>
   <footer class="footer">
