--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 
 <body class="page">
   <div class="popup">
-
+    <div class="popup__overlay"></div>
+    <div class="popup__container">
+      <h2 class="popup__header">Редактировать профиль</h2>
+      <p class="popup__name">Жак-Ив Кусто</p>
+      <p class="popup__caption">Исследователь океана</p>
+      <button class="popup__button">Сохранить</button>
+      <div class="popup__close-icon"></div>
+    </div>
   </div>
-  <div class="popup__container">
-    <h2 class="popup__header">Редактировать профиль</h2>
-    <p class="popup__name">Жак-Ив Кусто</p>
-    <p class="popup__caption">Исследователь океана</p>
-    <button class="popup__button">Сохранить</button>
-    <div class="popup__close-icon"></div>
-  </div>
+  
   <header class="header">
     <img class="header__logo" src="./images/logo.svg" alt="логотип Место Россия">
   </header>
@@ -83,6 +84,7 @@
   <footer class="footer">
     <p class="footer__text">&copy; 2020 Mesto Russia</p>
   </footer>
+  <script src="./pages/index.js"></script>
 </body>
 
 </html>
