--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="popup__overlay"></div>
     <div class="popup__container">
       <h2 class="popup__header">Редактировать профиль</h2>
-      <p class="popup__name">Жак-Ив Кусто</p>
-      <p class="popup__caption">Исследователь океана</p>
+      <input type="text" class="popup__name" value="Жак-Ив Кусто"></input>
+      <input type="text" class="popup__caption" value="Исследователь океана"></input>
       <button class="popup__button">Сохранить</button>
       <div class="popup__close-icon"></div>
     </div>
