--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section class="elements">
       <ul class="elements__list">
-        <li class="element">
+        <!-- <li class="element">
           <img class="element__image" src="./images/karachaevsk.png" alt="Карачаевск">
           <div class="element__caption">
             <h2 class="element__heading">Карачаевск</h2>
@@ -69,7 +69,19 @@
             <h2 class="element__heading">Карачаево-Черкессия</h2>
             <button class="element__like-button"></button>
           </div>
-        </li>
+        </li> -->
+        <template class="element-template">
+          <li class="element">
+            <div class="element__image-container">
+              <img class="element__image">
+              <button class="element__delete-button"></button> 
+            </div>
+            <div class="element__caption">
+              <h2 class="element__heading"></h2>
+              <button class="element__like-button"></button>
+            </div>
+          </li>
+        </template>
       </ul>
     </section>
   </main>
@@ -84,6 +96,17 @@
       <input type="text" class="popup__input-text popup__input-text_type_job" name="popup__job" required
         placeholder="Род деятельности">
       <button type="submit" class="popup__button" name="popup__submit-button">Сохранить</button>
+      <button type="reset" aria-label="Закрыть" class="popup__close-icon" name="popup__reset-button"></button>
+    </form>
+  </div>
+  <div class="popup popup_type_addCard">
+    <form class="popup__container" name="popup__form">
+      <h2 class="popup__header">Новое место</h2>
+      <input type="text" class="popup__input-text popup__input-text_type_name" name="popup__name" required
+        placeholder="Название">
+      <input type="text" class="popup__input-text popup__input-text_type_link" name="popup__link" required
+        placeholder="Ссылка на картинку">
+      <button type="submit" class="popup__button" name="popup__submit-button">Создать</button>
       <button type="reset" aria-label="Закрыть" class="popup__close-icon" name="popup__reset-button"></button>
     </form>
   </div>
