--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p class="footer__text">&copy; 2020 Mesto Russia</p>
   </footer>
   <div class="popup">
-    <form class="popup__container" name="popup__form">
+    <form class="popup__container popup__container_type_profile" name="popup__form">
       <h2 class="popup__header">Редактировать профиль</h2>
       <input type="text" class="popup__input-text popup__input-text_type_name" name="popup__name" required
         placeholder="Ваше имя">
@@ -58,21 +58,21 @@
     </form>
   </div>
   <div class="popup popup_type_addCard">
-    <form class="popup__container" name="popup__form">
-      <h2 class="popup__header">Новое место</h2>
-      <input type="text" class="popup__input-text popup__input-text_type_name" name="popup__name" required
+    <form class="popup__container popup__container_type_addCard" name="popup__form">
+      <h2 class="popup__header popup__header_narrow">Новое место</h2>
+      <input type="text" class="popup__input-text popup__input-text_small popup__input-text_type_place" name="popup__place" required
         placeholder="Название">
-      <input type="text" class="popup__input-text popup__input-text_type_link" name="popup__link" required
+      <input type="text" class="popup__input-text popup__input-text_small popup__input-text_type_link" name="popup__link" required
         placeholder="Ссылка на картинку">
-      <button type="submit" class="popup__button" name="popup__submit-button">Создать</button>
-      <button type="reset" aria-label="Закрыть" class="popup__close-icon" name="popup__reset-button"></button>
+      <button type="submit" class="popup__button popup__button_narrow" name="popup__submit-button">Создать</button>
+      <button type="reset" aria-label="Закрыть" class="popup__close-icon popup__close-icon_position_corner" name="popup__reset-button"></button>
     </form>
   </div>
   <div class="popup popup_type_image">
     <figure class="popup__figure">
       <img class="popup__image">
       <figcaption class="popup__caption"></figcaption>
-      <button type="button" aria-label="Закрыть" class="popup__close-icon" name="popup__close-button"></button>
+      <button type="button" aria-label="Закрыть" class="popup__close-icon popup__close-icon_position_corner" name="popup__close-button"></button>
     </figure>
   </div>
   <script src="./pages/index.js"></script>
