--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
   <div class="popup">
     <form class="popup__container popup__container_type_profile" name="popup__form">
       <h2 class="popup__header">Редактировать профиль</h2>
-      <input type="text" class="popup__input-text popup__input-text_type_name" name="popup__name" required
+      <input type="text" id="name-input" class="popup__input-text popup__input-text_type_name" name="popup__name" required minlength="2" maxlength="40"
         placeholder="Ваше имя">
-      <input type="text" class="popup__input-text popup__input-text_type_job" name="popup__job" required
+        <span class="popup__error" id="name-input-error"></span>
+      <input type="text" id="job-input" class="popup__input-text popup__input-text_type_job" name="popup__job" required minlength="2" maxlength="200"
         placeholder="Род деятельности">
+        <span class="popup__error" id="job-input-error"></span>
       <button type="submit" class="popup__button" name="popup__submit-button">Сохранить</button>
       <button type="reset" aria-label="Закрыть" class="popup__close-icon" name="popup__reset-button"></button>
     </form>
@@ -48,10 +50,12 @@
   <div class="popup popup_type_addCard">
     <form class="popup__container popup__container_type_addCard" name="popup__form">
       <h2 class="popup__header popup__header_narrow">Новое место</h2>
-      <input type="text" class="popup__input-text popup__input-text_small popup__input-text_type_place"
-        name="popup__place" required placeholder="Название">
-      <input type="text" class="popup__input-text popup__input-text_small popup__input-text_type_link"
+      <input type="text" id="place-input" class="popup__input-text popup__input-text_small popup__input-text_type_place"
+        name="popup__place" required minlength="2" maxlength="30" placeholder="Название">
+        <span class="popup__error" id="place-input-error"></span>
+      <input type="url" id="link-input" class="popup__input-text popup__input-text_small popup__input-text_type_link"
         name="popup__link" required placeholder="Ссылка на картинку">
+        <span class="popup__error" id="link-input-error"></span>
       <button type="submit" class="popup__button popup__button_narrow" name="popup__submit-button">Создать</button>
       <button type="reset" aria-label="Закрыть" class="popup__close-icon popup__close-icon_position_corner"
         name="popup__reset-button"></button>
@@ -78,6 +82,7 @@
     </li>
   </template>
   <script src="./pages/index.js"></script>
+  <script src="./pages/validate.js"></script>
 </body>
 
 </html>
