--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p class="footer__text">&copy; 2020 Mesto Russia</p>
   </footer>
   <div class="popup">
-    <form class="popup__container popup__container_type_profile" name="popup__form">
+    <form class="popup__container popup__container_type_profile" name="popup__form" novalidate>
       <h2 class="popup__header">Редактировать профиль</h2>
       <input type="text" id="name-input" class="popup__input-text popup__input-text_type_name" name="popup__name" required minlength="2" maxlength="40"
         placeholder="Ваше имя">
@@ -48,7 +48,7 @@
     </form>
   </div>
   <div class="popup popup_type_addCard">
-    <form class="popup__container popup__container_type_addCard" name="popup__form">
+    <form class="popup__container popup__container_type_addCard" name="popup__form" novalidate>
       <h2 class="popup__header popup__header_narrow">Новое место</h2>
       <input type="text" id="place-input" class="popup__input-text popup__input-text_small popup__input-text_type_place"
         name="popup__place" required minlength="2" maxlength="30" placeholder="Название">
