--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     </form>
   </div>
   <div class="popup popup_type_image">
-    <form class="popup__figure">
+    <div class="popup__figure">
       <img class="popup__image" alt="" src="#">
       <h2 class="popup__caption"></h2>
       <button type="button" aria-label="Закрыть" class="popup__close-icon popup__close-icon_position_corner"
         name="popup__close-button"></button>
-    </form>
+    </div>
   </div>
   <template class="element-template">
     <li class="element">
