--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
     </li>
   </template>
-  <script src="./pages/index.js"></script>
+  <script src="./pages/index.js" type="module"></script>
   <script src="./pages/validate.js"></script>
 </body>
 
