--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto Russia</title>
 </head>
 
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/logo.svg" alt="логотип Место Россия">
+    <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="логотип Место Россия">
   </header>
   <main class="main">
     <section class="profile">
       <div class="profile__block">
-        <img class="profile__avatar" src="./images/avatar.png" alt="аватар">
+        <img class="profile__avatar" src="<%=require('./images/avatar.png')%>" alt="аватар">
         <div class="profile__info">
           <div class="profile__wrapper">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -81,7 +80,6 @@
       </div>
     </li>
   </template>
-  <script src="./pages/index.js" type="module"></script>
 </body>
 
 </html>
