fix:after  review

--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
       <button type="reset" aria-label="Закрыть" class="popup__close-icon" name="popup__reset-button"></button>
     </form>
   </div>
-  <div class="popup popup_type_addCard">
-    <form class="popup__container popup__container_type_addCard" name="popup__form" novalidate>
+  <div class="popup popup_type_add_card">
+    <form class="popup__container popup__container_type_add_card" name="popup__form" novalidate>
       <h2 class="popup__header popup__header_narrow">Новое место</h2>
       <input type="text" id="place-input" class="popup__input-text popup__input-text_small popup__input-text_type_place"
         name="popup__place" required minlength="2" maxlength="30" placeholder="Название">
